# Piano

./: CMakeLists.txt  RomanticPhone.xml  XmlWriter.xml  cpp  test.xml
MusicPlayer/: CMakeLists.txt  MusicPlayer.cpp  RomanticPhone.h  music.cpp  music.h  player.cpp  player.h
MusicPlayer/cmake/: MusicPlayerConfig.cmake.in  build_prameter.cmake
MusicPlayer/cmake/dependency/: gtest.cmake  libxml2.cmake
MusicPlayer/cmake/superbuild/: CMakeLists.txt
MusicPlayer/src/: CMakeLists.txt  music.cpp  music_score.cpp  player.cpp  reflector_base.cpp  serialize.cpp  xml_node.cpp  xml_reader.cpp  xml_writer.cpp
MusicPlayer/src/interface/: music.h  music_score.h  player.h  reader.h  serialize.h  xml_node.h  xml_reader.h  xml_writer.h
MusicPlayer/src/interface/reflector/: reflector.h  reflector_base.h
MusicPlayer/test/gtest/: CMakeLists.txt  gtest_main.cpp  test_gtest.cpp
output/MusicPlayer/include/: music.h  player.h
output/gtest/lib/pkgconfig/: gmock_main.pc
ui/: CMakeLists.txt  global.h  main.cpp  piano.cpp  piano.h  piano.ui
ui/item/: CMakeLists.txt  keyboardGroup.cpp  keyboardGroup.h  keyboardGroup.ui  pianokey.cpp  pianokey.h
